force-app/main/default/objects/Case/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <label>AI Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>